# oxinbox

./: .env.example  .gitignore  .vampus.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  ESPECIFICACIONES.md  GIT_FLOW.md  README.md  TODO.md  compose.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml  release-prepare.yml  release.yml
backend/: .vampus.yml  Cargo.toml
backend/migrations/: 01_init.sql  02_full_history.sql  03_prompt_configs.sql
backend/src/: auth.rs  core_types.rs  database.rs  db.rs  geo.rs  lib.rs  main.rs  middleware.rs  push.rs  search.rs
backend/src/ai/: mod.rs  task_builder.rs
backend/src/repository/: mod.rs
backend/src/routes/: ai.rs  auth.rs  contexts.rs  geo.rs  mod.rs  projects.rs  prompts.rs  push_routes.rs  query.rs  tasks.rs  voice.rs
backend/tests/: e2e.rs
core/: Cargo.toml
core/src/: lib.rs
deploy/: .env.prod  README.md  docker-compose.yml
frontend/: Cargo.toml  Dioxus.toml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend/public/: db.js  manifest.json  styles.css  sw.js
frontend/src/: App.tsx  animations.css  db.rs  global.css  global.d.ts  http.rs  main.rs  main.tsx  storage.rs  sync.rs  theme.ts
frontend/src/api/: http.ts
frontend/src/components/: AppLayout.tsx  ErrorBoundary.tsx  QueryDialog.tsx  TaskList.tsx  TextCapture.tsx  VoiceInput.tsx  calendar_view.rs  chat_view.rs  kanban.rs  login.rs  mod.rs  push_subscribe.rs  query_view.rs  search_view.rs  startup_review.rs  task_detail.rs  task_form.rs  task_list.rs  voice_input.rs
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: HomePage.tsx  LoginPage.tsx  PromptSettingsPage.tsx
frontend/src/store/: auth.ts
quadlets/: oxinbox-db.container  oxinbox-pgdata.volume  oxinbox.container  oxinbox.network
