[package]
name = "oxinbox-backend"
version = "0.1.8"
edition = "2024"
description = "HTTP/WS API server for the oxinbox GTD productivity system"
license = "MIT"
repository = "https://github.com/atareao/oxinbox"

[lints]
workspace = true

[lib]
name = "oxinbox_backend"
path = "src/lib.rs"

[[bin]]
name = "oxinbox-backend"
path = "src/main.rs"

[dependencies]
oxinbox-core = { path = "../core", version = "0.1.0" }
axum = { version = "0.7", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "migrate", "chrono", "uuid"] }
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { workspace = true }
serde_json = "1"
dotenvy = "0.15"
thiserror = "2"
webauthn-rs = { version = "0.6.1-dev", features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.6.1-dev"
url = "2"
rand = "0.8"
chrono = { workspace = true }
uuid = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
async-trait = "0.1"
regex = "1"
futures = "0.3"
web-push = "0.11"