[package]
name = "oxinbox"
version = "0.1.17"
edition = "2024"
description = "HTTP/WS API server for the oxinbox GTD productivity system"
license = "MIT"
repository = "https://github.com/atareao/oxinbox"

[[bin]]
name = "oxinbox"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["multipart", "ws"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "fs"] }
sqlx = { version = "0.9", features = ["postgres", "runtime-tokio", "migrate", "chrono", "uuid"] }
tower-http = { version = "0.7", features = ["cors", "trace", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde_json = "1"
dotenvy = "0.15"
thiserror = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "multipart", "native-tls", "form"] }
async-trait = "0.1"
regex = "1"
futures = "0.3"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
base64 = "0.22"
web-push = "0.11"
p256 = "0.14"
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.45", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v7", "serde"] }
