[package]
name = "oxinbox-core"
version = "0.1.0"
edition = "2024"
description = "Shared data types for the oxinbox GTD productivity system"
license = "MIT"
repository = "https://github.com/atareao/oxinbox"

[lints]
workspace = true

[lib]
name = "oxinbox_core"

[dependencies]
serde.workspace = true
chrono.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json = "1"