[package]
name = "oxinbox-frontend"
version = "0.1.0"
edition = "2024"

[lints]
workspace = true

[dependencies]
oxinbox-core = { path = "../core" }
dioxus = { version = "0.6", features = ["web", "router"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Storage",
    "Navigator",
    "ServiceWorkerContainer",
    "Request",
    "RequestInit",
    "Response",
    "Headers",
    "WebSocket",
    "MessageEvent",
    "console",
    "MediaDevices",
    "MediaStream",
    "MediaRecorder",
    "Blob",
    "BlobPropertyBag",
    "BinaryType",
    "IdbFactory",
    "IdbDatabase",
    "IdbOpenDbRequest",
    "IdbObjectStore",
    "IdbRequest",
    "IdbTransaction",
    "IdbIndex",
    "IdbKeyRange",
    "IdbTransactionMode",
    "DomException",
    "ServiceWorker",
    "ServiceWorkerRegistration",
] }
js-sys = "0.3"
serde = { workspace = true }
serde_json = "1"
serde-wasm-bindgen = "0.6"
chrono = { workspace = true }
uuid = { workspace = true, features = ["js"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen-futures = "0.4"